--- a/env/prod/k8/api/Dockerfile
+++ b/env/prod/k8/api/Dockerfile
@@ -3,8 +3,9 @@ COPY ./ /var/www/service
 WORKDIR /var/www/service/
 RUN go get github.com/mailru/easyjson
 RUN go install github.com/mailru/easyjson/...@latest
+RUN bash generateAll.sh
 RUN bash easyjsonGenerate.sh
-RUN bash cmd/api/prod.sh
+RUN go build -o ./tmp/api ./cmd/api/main.go
 
 
 FROM alpine
