--- a/env/prod/k8/user/Dockerfile
+++ b/env/prod/k8/user/Dockerfile
@@ -3,8 +3,9 @@ COPY ./ /var/www/service
 WORKDIR /var/www/service/
 RUN go get github.com/mailru/easyjson
 RUN go install github.com/mailru/easyjson/...@latest
+RUN bash gRPC.sh
 RUN bash easyjsonGenerate.sh
-RUN bash cmd/user/prod.sh
+RUN go build -o ./tmp/user ./cmd/user/user.go
 
 FROM alpine
 RUN apk add --no-cache libc6-compat
