--- a/env/prod/k8/user/user-deployment.yaml
+++ b/env/prod/k8/user/user-deployment.yaml
@@ -40,7 +40,10 @@ spec:
             - name: port
               value: :8086
             - name: AWS_REGION
-              value: ""
+              valueFrom:
+                secretKeyRef:
+                  name: secretkey
+                  key: AWS_REGION
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
                 secretKeyRef:
@@ -51,6 +54,16 @@ spec:
                 secretKeyRef:
                   name: secretkey
                   key: SECRET_KEY
+            - name: AWS_BUCKET_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: secretkey
+                  key: AWS_BUCKET_NAME
+            - name: AWS_S3_URL
+              valueFrom:
+                secretKeyRef:
+                  name: secretkey
+                  key: AWS_S3_URL
       imagePullSecrets:
         - name: wave
 
