WV-76: added cache, http2, expires to nginx.conf

--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -11,7 +11,7 @@ http {
     default upgrade;
     '' close;
   }
-
+  proxy_cache_path /var/lib/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:15m max_size=1G;
   sendfile on;
   tcp_nopush on;
   types_hash_max_size 2048;
@@ -29,16 +29,18 @@ http {
 
 
 server {
+  proxy_cache proxy_cache;
   root /var/www/wave;
-  listen 80;
+  listen 80 http2;
 
   server_name wave-music.online www.wave-music.online;
   return 301 https://wave-music.online$request_uri;
 
 }
 server {
+  proxy_cache proxy_cache;
   root /var/www/wave;
-  listen 443 ssl default_server;
+  listen 443 ssl default_server http2;
   server_name wave-music.online www.wave-music.online;
   ssl_session_cache   shared:SSL:2m;
   ssl_session_timeout 6h;
@@ -57,6 +59,8 @@ server {
 
 
   location / {
+    expires 7d;
+    access_log off;
     include  /etc/nginx/mime.types;
     gzip            on;
     proxy_pass http://nodejs.default.svc.cluster.local:8080;
