--- a/env/prod/k8/web/Dockerfile
+++ b/env/prod/k8/web/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx
 
 COPY config/nginx/nginx.prod.conf /etc/nginx/nginx.conf
 COPY env/prod/certs /var/www/certs
-
+RUN mkdir /var/lib/nginx/proxy_cache
 WORKDIR /var/www/wave/
