WV-76: fixed likes and check config

--- a/metrics/grafana/grafana.ini
+++ b/metrics/grafana/grafana.ini
@@ -41,7 +41,7 @@ protocol = http
 http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-domain = caddy.default.svc.cluster.local
+domain = wave-music.online
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
@@ -652,7 +652,7 @@ serve_from_sub_path = true
 ;mode = console file
 
 # Either "debug", "info", "warn", "error", "critical", default is "info"
-;level = info
+filters = auth:debug
 
 # optional settings to set different levels for specific loggers. Ex filters = sqlstore:debug
 ;filters =
