--- a/env/prod/k8/caddy/caddy-deployment.yaml
+++ b/env/prod/k8/caddy/caddy-deployment.yaml
@@ -25,9 +25,17 @@ spec:
         io.kompose.service: caddy
     spec:
       containers:
-        - env:
-            - name: ADMIN_PASSWORD
-            - name: ADMIN_USER
+        env:
+          - name: ADMIN_USER
+            valueFrom:
+              secretKeyRef:
+                name: secretprometheus
+                key: ADMIN_USER
+          - name: ADMIN_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: secretprometheus
+                key: ADMIN_PASSWORD
           image: mausved/wave_caddy
           name: caddy
           ports:
