--- a/env/prod/k8/prometheus/prometheus-deployment.yaml
+++ b/env/prod/k8/prometheus/prometheus-deployment.yaml
@@ -38,6 +38,17 @@ spec:
           name: prometheus
           ports:
             - containerPort: 9090
+          env:
+            - name: ADMIN_USER
+              valueFrom:
+                secretKeyRef:
+                  name: secretprometheus
+                  key: ADMIN_USER
+            - name: ADMIN_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: secretprometheus
+                  key: ADMIN_PASSWORD
       restartPolicy: Always
       imagePullSecrets:
         - name: wave
