--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
-      - name: generate easyjson
-        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+#      - name: generate easyjson
+#        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
       - name: generate test mocks
         run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
       - name: build
