--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
-#      - name: generate easyjson
-#        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
       - name: generate test mocks
         run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
       - name: build
@@ -54,8 +54,8 @@ jobs:
           go install github.com/mailru/easyjson/...@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
-#      - name: generate easyjson
-#        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
       - name: generate test mocks
         run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
       - name: golangci-lint
@@ -87,8 +87,8 @@ jobs:
           go install github.com/mailru/easyjson/...@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
-#      - name: generate easyjson
-#        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
       - name: go tests
         run: chmod +x test.sh && ./test.sh
 
