--- a/env/prod/k8/track/Dockerfile
+++ b/env/prod/k8/track/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /var/www/service/
 RUN go get github.com/mailru/easyjson
 RUN go install github.com/mailru/easyjson/...@latest
 RUN bash gRPC.sh
-#RUN bash easyjsonGenerate.sh
+RUN bash easyjsonGenerate.sh
 RUN go build -o ./tmp/track ./cmd/track/track.go
 
 FROM alpine
