--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -298,7 +298,7 @@ jobs:
 
   dockerAlbum_deploy:
     runs-on: ubuntu-latest
-    name: pre-build album image
+    name: deploy album image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -310,7 +310,7 @@ jobs:
 
   dockerAlertmanager_deploy:
     runs-on: ubuntu-latest
-    name: pre-build alertmanger image
+    name: deploy alertmanger image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -322,7 +322,7 @@ jobs:
 
   dockerApi_deploy:
     runs-on: ubuntu-latest
-    name: pre-build api image
+    name: deploy api image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -334,7 +334,7 @@ jobs:
 
   dockerArtist_deploy:
     runs-on: ubuntu-latest
-    name: pre-build artist image
+    name: deploy artist image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -346,7 +346,7 @@ jobs:
 
   dockerAuth_deploy:
     runs-on: ubuntu-latest
-    name: pre-build auth image
+    name: deploy auth image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -358,7 +358,7 @@ jobs:
 
   dockerCaddy_deploy:
     runs-on: ubuntu-latest
-    name: pre-build caddy image
+    name: deploy caddy image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -370,7 +370,7 @@ jobs:
 
   dockerGrafana_deploy:
     runs-on: ubuntu-latest
-    name: pre-build grafana image
+    name: deploy grafana image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -382,7 +382,7 @@ jobs:
 
   dockerPlaylist_deploy:
     runs-on: ubuntu-latest
-    name: pre-build playlist image
+    name: deploy playlist image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -394,7 +394,7 @@ jobs:
 
   dockerPostgres_deploy:
     runs-on: ubuntu-latest
-    name: pre-build postgres image
+    name: deploy postgres image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -406,7 +406,7 @@ jobs:
 
   dockerPrometheus_deploy:
     runs-on: ubuntu-latest
-    name: pre-build prometheus image
+    name: deploy prometheus image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -418,7 +418,7 @@ jobs:
 
   dockerRedis_deploy:
     runs-on: ubuntu-latest
-    name: pre-build redis image
+    name: deploy redis image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -430,7 +430,7 @@ jobs:
 
   dockerTrack_deploy:
     runs-on: ubuntu-latest
-    name: pre-build track image
+    name: deploy track image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -442,7 +442,7 @@ jobs:
 
   dockerUser_deploy:
     runs-on: ubuntu-latest
-    name: pre-build user image
+    name: deploy user image
     needs:
       - dockerPreBuildWaiter
     steps:
@@ -454,7 +454,7 @@ jobs:
 
   dockerWeb_deploy:
     runs-on: ubuntu-latest
-    name: pre-build web image
+    name: deploy web image
     needs:
       - dockerPreBuildWaiter
     steps:
