--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -483,7 +483,7 @@ jobs:
       - dockerUser_deploy
       - dockerWeb_deploy
     steps:
-      - run: echo "go to deploy to docker.hub"
+      - run: echo "go to deploy to k8s"
 
   #########################################
 
