--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -112,14 +112,26 @@ jobs:
       - buildWaiter
     steps:
       - uses: actions/checkout@v3
-      - name: Login to DockerHub Registry
-        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buidx-action@v1
       - name: Build image
-        run: cd deploy && chmod +x dockerBuild.sh && ./dockerBuild.sh album
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./prod/k8/album/Dockerfile
+          tags: mausved/album:latest
+          outputs: type=docker,dest=/tmp/album.tar
+      - name: Upload image as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: album
+          path: /tmp/album.tar
+
 
   dockerAlertmanager_pre-build:
     runs-on: ubuntu-latest
-    name: pre-build alertmanger image
+    name: pre-build alertmanager image
     needs:
       - buildWaiter
     steps:
@@ -292,12 +304,23 @@ jobs:
       - uses: actions/checkout@v3
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      - name: Build image
-        run: cd deploy && chmod +x deploy.sh && ./deploy.sh album
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Download artefact
+        uses: actions/download-artifact@v2
+        with:
+          name: album
+          path: /tmp
+      - name: Load docker image
+        run: |
+          docker load --input /tmp/album.tar
+          docker image ls -a
+      - name: Push image
+        run: cd deploy && chmod +x dockerPush.sh && ./dockerPush.sh album
 
   dockerAlertmanager_deploy:
     runs-on: ubuntu-latest
-    name: deploy alertmanger image
+    name: deploy alertmanager image
     needs:
       - dockerPreBuildWaiter
     steps:
