--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -10,7 +10,7 @@ http {
     default upgrade;
     '' close;
   }
-  proxy_cache_path /var/lib/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:15m max_size=1G;
+#   proxy_cache_path /var/lib/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:15m max_size=1G;
   sendfile on;
   tcp_nopush on;
   types_hash_max_size 2048;
@@ -56,7 +56,7 @@ server {
 
 
   location / {
-    proxy_cache proxy_cache;
+#     proxy_cache proxy_cache;
     expires 7d;
     access_log off;
     include  /etc/nginx/mime.types;
