--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -2,103 +2,104 @@ name: k8s
 on: [ push ]
 
 jobs:
-#  build:
-  #    name: build
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/setup-go@v3
-  #        with:
-  #          go-version: 1.18
-  #      - uses: actions/checkout@v3
-  #      - name: setting up
-  #        run: |
-  #          sudo apt-get update
-  #          sudo apt-get install -y protobuf-compiler
-  #          sudo apt-get install -y golang-goprotobuf-dev
-  #          go install github.com/swaggo/swag/cmd/swag@latest
-  #          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-  #          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-  #          go install github.com/favadi/protoc-go-inject-tag@latest
-  #          go install github.com/vektra/mockery/v2@latest
-  #          go get github.com/mailru/easyjson
-  #          go install github.com/mailru/easyjson/...@latest
-  #      - uses: actions/checkout@v3
-  #      - name: generate gRPC and docs
-  #        run: chmod +x generateAll.sh && ./generateAll.sh
-  #      - name: generate easyjson
-  #        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
-  #      - name: generate test mocks
-  #        run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
-  #      - name: build
-  #        run: go build -v ./...
-  #
-  #  golangci-lint:
-  #    name: lint
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/setup-go@v3
-  #        with:
-  #          go-version: 1.18
-  #      - uses: actions/checkout@v3
-  #      - name: setting up
-  #        run: |
-  #          sudo apt-get update
-  #          sudo apt-get install -y protobuf-compiler
-  #          sudo apt-get install -y golang-goprotobuf-dev
-  #          go install github.com/swaggo/swag/cmd/swag@latest
-  #          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-  #          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-  #          go install github.com/favadi/protoc-go-inject-tag@latest
-  #          go install github.com/vektra/mockery/v2@latest
-  #          go get github.com/mailru/easyjson
-  #          go install github.com/mailru/easyjson/...@latest
-  #      - name: generate gRPC and docs
-  #        run: chmod +x generateAll.sh && ./generateAll.sh
-  #      - name: generate easyjson
-  #        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
-  #      - name: generate test mocks
-  #        run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
-  #      - name: golangci-lint
-  #        uses: golangci/golangci-lint-action@v3
-  #        with:
-  #          version: latest
-  #          skip-pkg-cache: true
-  #          skip-build-cache:
-  #            true
-  #  test:
-  #    name: test
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/setup-go@v3
-  #        with:
-  #          go-version: 1.18
-  #      - uses: actions/checkout@v3
-  #      - name: setting up
-  #        run: |
-  #          sudo apt-get update
-  #          sudo apt-get install -y protobuf-compiler
-  #          sudo apt-get install -y golang-goprotobuf-dev
-  #          go install github.com/swaggo/swag/cmd/swag@latest
-  #          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-  #          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-  #          go install github.com/favadi/protoc-go-inject-tag@latest
-  #          go install github.com/vektra/mockery/v2@latest
-  #          go get github.com/mailru/easyjson
-  #          go install github.com/mailru/easyjson/...@latest
-  #      - name: generate gRPC and docs
-  #        run: chmod +x generateAll.sh && ./generateAll.sh
-  #      - name: generate easyjson
-  #        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
-  #      - name: go tests
-  #        run: chmod +x test.sh && ./test.sh
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - uses: actions/checkout@v3
+      - name: setting up
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+          sudo apt-get install -y golang-goprotobuf-dev
+          go install github.com/swaggo/swag/cmd/swag@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install github.com/favadi/protoc-go-inject-tag@latest
+          go install github.com/vektra/mockery/v2@latest
+          go get github.com/mailru/easyjson
+          go install github.com/mailru/easyjson/...@latest
+      - uses: actions/checkout@v3
+      - name: generate gRPC and docs
+        run: chmod +x generateAll.sh && ./generateAll.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+      - name: generate test mocks
+        run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
+      - name: build
+        run: go build -v ./...
+
+  golangci-lint:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - uses: actions/checkout@v3
+      - name: setting up
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+          sudo apt-get install -y golang-goprotobuf-dev
+          go install github.com/swaggo/swag/cmd/swag@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install github.com/favadi/protoc-go-inject-tag@latest
+          go install github.com/vektra/mockery/v2@latest
+          go get github.com/mailru/easyjson
+          go install github.com/mailru/easyjson/...@latest
+      - name: generate gRPC and docs
+        run: chmod +x generateAll.sh && ./generateAll.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+      - name: generate test mocks
+        run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          skip-pkg-cache: true
+          skip-build-cache:
+            true
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+      - uses: actions/checkout@v3
+      - name: setting up
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+          sudo apt-get install -y golang-goprotobuf-dev
+          go install github.com/swaggo/swag/cmd/swag@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install github.com/favadi/protoc-go-inject-tag@latest
+          go install github.com/vektra/mockery/v2@latest
+          go get github.com/mailru/easyjson
+          go install github.com/mailru/easyjson/...@latest
+      - name: generate gRPC and docs
+        run: chmod +x generateAll.sh && ./generateAll.sh
+      - name: generate easyjson
+        run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
+      - name: go tests
+        run:
+          chmod +x test.sh && ./test.sh
 
   buildWaiter:
     runs-on: ubuntu-latest
     name: checks-waiter
-    #    needs:
-    #      - build
-    #      - golangci-lint
-    #      - test
+    needs:
+      - build
+      - golangci-lint
+      - test
     steps:
       - run: echo "go to build images"
 
