--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -19,19 +19,19 @@ services:
     depends_on:
       - wave_music
 
-  nginx-exporter:
-    image: nginx/nginx-prometheus-exporter
-    container_name: nginx-exporter
-    environment:
-      - SCRAPE_URI=http://web:80/metrics
-      - TELEMETRY_PATH=/metrics
-      - NGINX_RETRIES=1
-      - ADMIN_USER=${ADMIN_USER}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-    expose:
-      - 9113
-    depends_on:
-      - web
+  #  nginx-exporter:
+  #    image: nginx/nginx-prometheus-exporter
+  #    container_name: nginx-exporter
+  #    environment:
+  #      - SCRAPE_URI=http://web:80/metrics
+  #      - TELEMETRY_PATH=/metrics
+  #      - NGINX_RETRIES=1
+  #      - ADMIN_USER=${ADMIN_USER}
+  #      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+  #    expose:
+  #      - 9113
+  #    depends_on:
+  #      - web
 
   wave_music:
     image: mausved/wave_music_api_v1
@@ -53,6 +53,8 @@ services:
       - playlist
       - auth
       - user
+      - mongo
+      - linker
 
   album:
     container_name: album
@@ -176,6 +178,38 @@ services:
       - db
       - redis
 
+  linker:
+    container_name: linker
+    image: mausved/wave_music_api_v1
+    working_dir: /var/www/service
+    restart: always
+    environment:
+      - dbType=mongo
+      - port=:8087
+      - exporterPort=:9087
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=wave
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=wave
+      - ME_CONFIG_MONGODB_URL=mongodb://mongo:27017
+    expose:
+      - 8087
+      - 9087
+    entrypoint: ./cmd/linker/run.sh
+    volumes:
+      - ./airs/linker.toml:/var/www/service/cmd/linker/.air.toml:ro
+      - ../..:/var/www/service
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo
+    container_name: mongo
+    restart: always
+    #    environment:
+    #      - MONGO_INITDB_ROOT_USERNAME=wave
+    #      - MONGO_INITDB_ROOT_PASSWORD=wave
+    expose:
+      - 27017
+
   redis:
     image: redis
     container_name: redis
@@ -196,141 +230,141 @@ services:
     #    volumes:
     #      - data:/var/lib/postgresql/data
 
-  redis-exporter:
-    image: oliver006/redis_exporter:alpine
-    container_name: redis-exporter
-    restart: unless-stopped
-    command: [ "--redis.addr", "redis://redis:6379" ]
-    environment:
-      - ADMIN_USER=${ADMIN_USER}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-    expose:
-      - 9121
-    depends_on:
-      - redis
+#  redis-exporter:
+#    image: oliver006/redis_exporter:alpine
+#    container_name: redis-exporter
+#    restart: unless-stopped
+#    command: [ "--redis.addr", "redis://redis:6379" ]
+#    environment:
+#      - ADMIN_USER=${ADMIN_USER}
+#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+#    expose:
+#      - 9121
+#    depends_on:
+#      - redis
+#
+#  postgres-exporter:
+#    image: wrouesnel/postgres_exporter
+#    container_name: postgres-exporter
+#    environment:
+#      - DATA_SOURCE_NAME=postgresql://postgres:music@db:5432/wave?sslmode=disable
+#      - USER
+#      - ADMIN_USER=${ADMIN_USER}
+#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+#    expose:
+#      - 9187
+#    depends_on:
+#      - db
 
-  postgres-exporter:
-    image: wrouesnel/postgres_exporter
-    container_name: postgres-exporter
-    environment:
-      - DATA_SOURCE_NAME=postgresql://postgres:music@db:5432/wave?sslmode=disable
-      - USER
-      - ADMIN_USER=${ADMIN_USER}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-    expose:
-      - 9187
-    depends_on:
-      - db
+#  prometheus:
+#    image: prom/prometheus
+#    container_name: prometheus
+#    volumes:
+#      - ../../metrics/prometheus:/etc/prometheus
+#      - prometheus_data:/prometheus
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yml'
+#      - '--storage.tsdb.path=/prometheus'
+#      - '--web.console.libraries=/etc/prometheus/console_libraries'
+#      - '--web.console.templates=/etc/prometheus/consoles'
+#      - '--storage.tsdb.retention.time=200h'
+#      - '--web.enable-lifecycle'
+#      - '--web.external-url=/monitoring/prometheus/'
+#      - '--web.route-prefix=/monitoring/prometheus/'
+#    restart: unless-stopped
+#    depends_on:
+#      - pushgateway
+#      - nodeexporter
+#      - redis-exporter
+#      - nginx-exporter
+#      - postgres-exporter
+#      - alertmanager
+#      - cadvisor
+#      - wave_music
+#    expose:
+#      - 9090
 
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    volumes:
-      - ../../metrics/prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
-      - '--web.external-url=/monitoring/prometheus/'
-      - '--web.route-prefix=/monitoring/prometheus/'
-    restart: unless-stopped
-    depends_on:
-      - pushgateway
-      - nodeexporter
-      - redis-exporter
-      - nginx-exporter
-      - postgres-exporter
-      - alertmanager
-      - cadvisor
-      - wave_music
-    expose:
-      - 9090
+#  alertmanager:
+#    image: prom/alertmanager
+#    container_name: alertmanager
+#    volumes:
+#      - ../../metrics/alertmanager:/etc/alertmanager
+#    command:
+#      - '--config.file=/etc/alertmanager/config.yml'
+#      - '--storage.path=/alertmanager'
+#    restart: unless-stopped
+#    expose:
+#      - 9093
 
-  alertmanager:
-    image: prom/alertmanager
-    container_name: alertmanager
-    volumes:
-      - ../../metrics/alertmanager:/etc/alertmanager
-    command:
-      - '--config.file=/etc/alertmanager/config.yml'
-      - '--storage.path=/alertmanager'
-    restart: unless-stopped
-    expose:
-      - 9093
+#  nodeexporter:
+#    image: prom/node-exporter
+#    container_name: nodeexporter
+#    volumes:
+#      - /proc:/host/proc:ro
+#      - /sys:/host/sys:ro
+#      - /:/rootfs:ro
+#    command:
+#      - '--path.procfs=/host/proc'
+#      - '--path.rootfs=/rootfs'
+#      - '--path.sysfs=/host/sys'
+#      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+#    restart: unless-stopped
+#    expose:
+#      - 9100
 
-  nodeexporter:
-    image: prom/node-exporter
-    container_name: nodeexporter
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-    restart: unless-stopped
-    expose:
-      - 9100
+#  cadvisor:
+#    image: gcr.io/cadvisor/cadvisor
+#    container_name: cadvisor
+#    volumes:
+#      - /:/rootfs:ro
+#      - /var/run:/var/run:rw
+#      - /sys:/sys:ro
+#      - /var/lib/docker:/var/lib/docker:ro
+#      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
+#    restart: unless-stopped
+#    expose:
+#      - 8080
 
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor
-    container_name: cadvisor
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker:/var/lib/docker:ro
-      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
-    restart: unless-stopped
-    expose:
-      - 8080
+#  grafana:
+#    image: grafana/grafana
+#    container_name: grafana
+#    volumes:
+#      - grafana_data:/var/lib/grafana
+#      - ../../metrics/grafana/grafana.ini:/etc/grafana/grafana.ini
+#      - ../../metrics/grafana/provisioning:/etc/grafana/provisioning
+#    environment:
+#      - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
+#      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
+#      - GF_USERS_ALLOW_SIGN_UP=false
+#      - ADMIN_USER=${ADMIN_USER}
+#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+#    restart: unless-stopped
+#    expose:
+#      - 3000
+#
+#  pushgateway:
+#    image: prom/pushgateway
+#    container_name: pushgateway
+#    restart: unless-stopped
+#    expose:
+#      - 9091
 
-  grafana:
-    image: grafana/grafana
-    container_name: grafana
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ../../metrics/grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ../../metrics/grafana/provisioning:/etc/grafana/provisioning
-    environment:
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - GF_USERS_ALLOW_SIGN_UP=false
-      - ADMIN_USER=${ADMIN_USER}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-    restart: unless-stopped
-    expose:
-      - 3000
-
-  pushgateway:
-    image: prom/pushgateway
-    container_name: pushgateway
-    restart: unless-stopped
-    expose:
-      - 9091
-
-  caddy:
-    image: caddy
-    container_name: caddy
-    expose:
-      - "3000"
-      - "9090"
-      - "9113"
-    ports:
-      - "9093:9093"
-      - "9091:9091"
-      - "9121:9121"
-    volumes:
-      - ../../metrics/caddy:/etc/caddy
-    environment:
-      - ADMIN_USER=${ADMIN_USER}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-    restart: unless-stopped
-    depends_on:
-      - prometheus
+#  caddy:
+#    image: caddy
+#    container_name: caddy
+#    expose:
+#      - "3000"
+#      - "9090"
+#      - "9113"
+#    ports:
+#      - "9093:9093"
+#      - "9091:9091"
+#      - "9121:9121"
+#    volumes:
+#      - ../../metrics/caddy:/etc/caddy
+#    environment:
+#      - ADMIN_USER=${ADMIN_USER}
+#      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+#    restart: unless-stopped
+#    depends_on:
+#      - prometheus
