WV-80: fixed results

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -34,7 +34,7 @@ server {
   root /var/www/wave;
   listen 80 default_server;
 
-  #server_name wave.com www.wave.com;
+#   server_name wave-music.online www.wave-music.online;
 
 
   location / {
