--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -35,6 +35,49 @@ server {
   return 301 https://wave-music.online$request_uri;
 
 }
+
+server {
+  root /var/www/wave;
+  listen 80 http2;
+
+  server_name wave-music.xyz www.wave-music.xyz;
+  return 301 https://wave-music.xyz$request_uri;
+
+}
+
+# wave-music.xyz
+server {
+  root /var/www/wave;
+  listen 443 ssl default_server http2;
+  server_name wave-music.xyz www.wave-music.xyz;
+  ssl_session_cache   shared:SSL:2m;
+  ssl_session_timeout 6h;
+  ssl_certificate      /var/www/certs/fullchain.pem;
+  ssl_certificate_key  /var/www/certs/privkey.pem;
+  keepalive_timeout 150;
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header X-Content-Type-Options "nosniff";
+  add_header X-XSS-Protection "1; mode=block";
+  underscores_in_headers on;
+
+  ssl_prefer_server_ciphers On;
+  ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
+  ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK;
+  add_header Strict-Transport-Security max-age=15768000;
+
+  location / {
+    include  /etc/nginx/mime.types;
+    gzip            on;
+    proxy_pass http://linker.default.svc.cluster.local:8087;
+
+    gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
+    gzip_min_length 1000;
+  }
+
+
+}
+
+# wave-music.online
 server {
   root /var/www/wave;
   listen 443 ssl default_server http2;
