--- a/env/prod/k8/linker/Dockerfile
+++ b/env/prod/k8/linker/Dockerfile
@@ -3,13 +3,12 @@ COPY ./ /var/www/service
 WORKDIR /var/www/service/
 RUN go get github.com/mailru/easyjson
 RUN go install github.com/mailru/easyjson/...@latest
-RUN bash gRPC.sh
-RUN bash easyjsonGenerate.sh
-RUN go build -o ./tmp/track ./cmd/track/track.go
+RUN bash generateAll.sh
+RUN go build -o ./tmp/linker ./cmd/linker/linker.go
 
 FROM alpine
 RUN apk add --no-cache libc6-compat
-COPY --from=build_step /var/www/service/tmp/track /var/www/service/
+COPY --from=build_step /var/www/service/tmp/linker /var/www/service/
 WORKDIR /var/www/service/
-RUN chmod +x track
-ENTRYPOINT ["sh", "-c", "./track"]
+RUN chmod +x linker
+ENTRYPOINT ["sh", "-c", "./linker"]
