WV-77: хранение трека целиком, а не только его id

--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -177,9 +177,9 @@ services:
       - AUTH_GRPC_ADDR=auth:8085
     expose:
       - 6789
-    entrypoint: ./cmd/run.sh
+    entrypoint: ./websocket-server/cmd/run.sh
     volumes:
-      - ../../websocket-server:/websocket-server
+      - ../..:/websocket-server
     depends_on:
       - redis
       - auth
