--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -67,6 +67,14 @@ server {
     gzip_min_length 1000;
   }
 
+  location /api/v1/player-sync {
+        proxy_pass http://websocket-server.default.svc.cluster.local:6789;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+  }
+
   location /api {
      proxy_set_header                Host wave-music.online;
      add_header Access-Control-Allow-Origin nodejs.default.svc.cluster.local:8080;
