--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -1,4 +1,3 @@
-
 events {
   worker_connections 768;
 }
@@ -48,12 +47,12 @@ server {
 # wave-music.xyz
 server {
   root /var/www/wave;
-  listen 443 ssl default_server http2;
+  listen 443 ssl http2;
   server_name wave-music.xyz www.wave-music.xyz;
   ssl_session_cache   shared:SSL:2m;
   ssl_session_timeout 6h;
-  ssl_certificate      /var/www/certs/fullchain.pem;
-  ssl_certificate_key  /var/www/certs/privkey.pem;
+  ssl_certificate      /var/www/certs/xyz/fullchain.pem;
+  ssl_certificate_key  /var/www/certs/xyz/privkey.pem;
   keepalive_timeout 150;
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options "nosniff";
@@ -66,14 +65,14 @@ server {
   add_header Strict-Transport-Security max-age=15768000;
 
   location / {
+    proxy_set_header                Host wave-music.xyz;
     include  /etc/nginx/mime.types;
     gzip            on;
-    proxy_pass http://linker.default.svc.cluster.local:8087;
+    proxy_pass http://wave.default.svc.cluster.local:5000;
 
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
   }
-
 
 }
 
