WV-81: added mongo and redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.5"
 
 volumes:
-  postgres_data:
-  redis_data:
+  postgres_data: { }
+  redis_data: { }
+  mongo_data: { }
 
 services:
   db:
@@ -17,3 +18,19 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis
+    container_name: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  mongo:
+    image: mongo
+    container_name: mongo
+    restart: always
+    ports:
+      - "27017:27017"
