WV-81: added mongo auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,12 @@ services:
     image: mongo
     container_name: mongo
     restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=wave
+      - MONGO_INITDB_ROOT_PASSWORD=music
+      - MONGO_INITDB_DATABASE=urls
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
